# scoutapps

./: .gitignore  Directory.Packages.props  README.md  __dk.cmake  dk  dkproject.jsonc
2026/: README.md  ScoutApp.sln
2026/ScoutApp/: App.axaml  App.axaml.cs  ScoutApp.csproj
2026/ScoutApp.Android/: MainActivity.cs  ScoutApp.Android.csproj
2026/ScoutApp.Android/Properties/: AndroidManifest.xml
2026/ScoutApp.Browser/: Program.cs  ScoutApp.Browser.csproj
2026/ScoutApp.Browser/Properties/: launchSettings.json
2026/ScoutApp.Browser/wwwroot/: index.html
2026/ScoutApp.Desktop/: Program.cs  ScoutApp.Desktop.csproj  app.manifest
2026/ScoutApp.iOS/: AppDelegate.cs  Info.plist  Main.cs  ScoutApp.iOS.csproj
2026/ScoutApp.iOS/Resources/: LaunchScreen.xib
2026/ScoutApp/Assets/: 2023wasno.json
2026/ScoutApp/Converter/: EnumToBooleanConverter.cs  JsonToCSConverter.cs
2026/ScoutApp/ViewModels/: MainViewModel.cs  ViewModelBase.cs
2026/ScoutApp/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
docs/SquirrelScout/: 2026SetupThruHTTPS.md  Database.md  DkCoderMigration.md
packaging/: install-shortcuts.ps1
src/SonicScout_Setup/: AndroidStudio.ml  CMakeNinja.ml  Clean.ml  Database.ml  Dependencies.ml  Develop.ml  DotNetBuild.ml  HttpServer.ml  InitialSteps.ml  MSYS2.ml  Package.ml  ProjectSource.ml  Python.ml  Qt.ml  RunAndroidStudio.ml  RunGradle.ml  RunNinja.ml  RunWithCompiler.ml  SSCli.ml  Scanner.ml  ScoutAndroid.ml  ScoutBackend.ml  Slots.ml  Sqlite3.ml  Utils.ml
us/SonicScoutAndroid/: .gitignore  CMakeLists.txt  CMakePresets.json  dk.cmd  dkproject.jsonc  gradle.properties
us/SonicScoutAndroid/data/: build.gradle
us/SonicScoutAndroid/dependencies/: CMakeLists.txt
us/SonicScoutAndroid/dkconfig/: build.gradle
us/SonicScoutBackend/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets-SUGGESTED.json  dk  dk.cmd  dkproject.jsonc
us/SonicScoutBackend/dependencies/: CMakeLists.txt  install-exe.script.cmake
us/SonicScoutBackend/src/: CMakeLists.txt
us/SonicScoutBackend/src/SonicScout_MainCLI/: CMakeLists.txt  SquirrelScout_cli.ml
us/SonicScoutBackend/src/SonicScout_ManagerApp/: CMakeLists.txt  ManagerApp_ml.ml  squirrel_scout_manager.c
us/SonicScoutBackend/src/SonicScout_ObjsLib/: CMakeLists.txt  Init.ml
us/SonicScoutBackend/tests/: CMakeLists.txt
us/SonicScoutBackend/tests/SonicScout_Units/: CMakeLists.txt
(+34 files in other folders)
